<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    tools:context=".ui.activity.PostDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/abc_vector_test"
                android:backgroundTint="@android:color/black"
                android:layout_marginStart="12dp"
                android:layout_gravity="center_vertical"
                android:id="@+id/back"/>
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nunito"
                android:text="@string/post" />
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>
    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/viewLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="false">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="70dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_profile"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:tint="@color/charcoal_grey"
                android:src="@drawable/bagas"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/name"
                android:textStyle="bold"
                android:maxLines="1"
                android:includeFontPadding="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_profile"
                app:layout_constraintTop_toTopOf="@id/image_profile" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="16dp"
                android:text="@string/timePost"
                android:textSize="12sp"
                android:textColor="@color/charcoal_light_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvAccount"
                app:layout_constraintTop_toBottomOf="@id/tvAccount" />

            <TextView
                android:id="@+id/tvTextPost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/textPost"
                app:layout_constraintTop_toBottomOf="@id/tvTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imgPost"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginTop="12dp"
                android:src="@color/colorPrimary"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name"
                app:layout_constraintTop_toBottomOf="@id/tvTextPost"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/linearMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/app_name"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgPost"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:id="@+id/imgLike"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:padding="8dp"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/shape_bt"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_favorite_border" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:gravity="center"
                    android:background="@drawable/shape_bt"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/imgComment"
                        android:layout_width="12dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/comment" />
                    <TextView
                        android:id="@+id/tvComment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginStart="3dp"
                        android:layout_gravity="center"
                        android:textSize="10sp"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/imgShare"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:background="@drawable/shape_bt"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/share" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearMenu"
                tools:listitem="@layout/item_comment" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/white"
        android:orientation="horizontal">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#cecece"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/imgAdd"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_add_a_photo"
            android:tint="#cecece"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/etComment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="75sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="12dp"
            android:hint="@string/hintEdit"
            android:inputType="text"
            android:maxLines="5"
            android:textSize="13sp"
            android:paddingStart="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/shape_comment"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btComment"
            android:layout_width="32dp"
            android:layout_height="28dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/ic_send"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/etComment"
            app:layout_constraintEnd_toEndOf="@id/etComment"
            app:layout_constraintTop_toTopOf="@id/etComment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>