<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorMain"
    app:cardBackgroundColor="@android:color/white"
    android:layout_marginBottom="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profile"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:tint="@color/charcoal_grey"
            android:src="@drawable/bagas"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
            android:text="@string/name"
            android:textColor="@android:color/secondary_text_light"
            android:maxLines="1"
            android:includeFontPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_profile"
            app:layout_constraintTop_toTopOf="@id/image_profile" />

        <Button
            android:id="@+id/btPopUp"
            android:layout_width="5dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_menu"
            android:backgroundTint="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/tvTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="16dp"
            android:text="@string/timePost"
            android:textSize="12sp"
            android:textColor="@color/charcoal_light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvAccount"
            app:layout_constraintTop_toBottomOf="@id/tvAccount" />

        <TextView
            android:id="@+id/tvTextPost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/tertiary_text_dark"
            android:text="@string/textPost"
            app:layout_constraintTop_toBottomOf="@id/tvTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imgPost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:src="@color/colorPrimary"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name"
            app:layout_constraintTop_toBottomOf="@id/tvTextPost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_name"
            android:gravity="start"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPost"
            tools:ignore="RtlSymmetry">

            <FrameLayout
                android:id="@+id/frameLiked"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_bt"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/imgLike"
                        android:layout_width="wrap_content"
                        android:layout_height="14dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_favorite_border" />
                    <TextView
                        android:id="@+id/likedCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="13sp"/>
                </LinearLayout>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/frameComment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_bt"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables,UselessParent">

                    <ImageView
                        android:id="@+id/imgComment"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/comment"  />
                    <TextView
                        android:id="@+id/commentCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:textColor="@android:color/black"
                        android:textSize="13sp"/>
                </LinearLayout>
            </FrameLayout>

            <ImageView
                android:id="@+id/imgShare"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:background="@drawable/shape_bt"
                android:layout_weight="1"
                android:padding="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/share" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>