<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    tools:context=".ui.activity.ReplyCommentActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nunito"
                android:text="Replies" />
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_comment"
        app:layout_constraintTop_toBottomOf="@id/viewLine"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgComment"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/bagas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toEndOf="@+id/imgComment"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="3dp"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/tvComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/textComment" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvReply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reply"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/cv"
            app:layout_constraintStart_toEndOf="@id/imgComment"
            android:layout_marginStart="24dp"
            android:layout_marginTop="3dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Like"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/cv"
            app:layout_constraintStart_toEndOf="@id/tvReply"
            android:layout_marginStart="12dp"
            android:layout_marginTop="3dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvReplyComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_comment"
        app:layout_constraintTop_toBottomOf="@id/layout_comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/comment_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/white"
        android:orientation="horizontal">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#cecece"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/imgAdd"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_add_a_photo"
            android:tint="#cecece"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/etComment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="75sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="12dp"
            android:hint="Type here to repply"
            android:inputType="text"
            android:maxLines="5"
            android:textSize="13sp"
            android:paddingStart="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/shape_comment"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btComment"
            android:layout_width="32dp"
            android:layout_height="28dp"
            android:layout_marginEnd="12dp"
            android:foreground="?android:attr/selectableItemBackground"
            style="?android:attr/selectableItemBackground"
            android:background="@drawable/ic_send"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/etComment"
            app:layout_constraintEnd_toEndOf="@id/etComment"
            app:layout_constraintTop_toTopOf="@id/etComment" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>